--- a/src/styles/root/CTAButton.css
+++ b/src/styles/root/CTAButton.css
@@ -1,4 +1,4 @@
-#btn-hero-cta {
+.btn-cta {
     box-shadow:
         inset 0px 1px 0px 0px rgba(255, 255, 255, 40%),
         inset 0px -1px 0px 0px rgba(0, 0, 0, 40%),
