--- a/src/styles/Markdown.css
+++ b/src/styles/Markdown.css
@@ -2,12 +2,24 @@
     @apply mt-14 pb-6 font-logo text-4xl font-bold tracking-tight text-neutral-800;
 }
 
+.content h2 {
+    @apply mt-10 pb-3 text-2xl font-semibold text-neutral-700;
+}
+
 .content h3 {
     @apply mt-8 pb-3 text-lg font-semibold text-neutral-700;
 }
 
+.content h4 {
+    @apply mt-6 pb-2 text-base font-semibold text-neutral-700;
+}
+
 .content p {
     @apply whitespace-pre-wrap leading-normal text-neutral-600;
+}
+
+.content ul {
+    @apply list-inside list-disc leading-normal text-neutral-600;
 }
 
 .content .spacer {
