--- a/src/styles/Markdown.css
+++ b/src/styles/Markdown.css
@@ -1,5 +1,5 @@
 .content h1 {
-    @apply mt-14 pb-6 font-logo text-4xl font-bold tracking-tight text-neutral-800;
+    @apply mt-14 pb-6 font-logo text-3xl sm:text-4xl font-bold tracking-tight text-neutral-800;
 }
 
 .content h2 {
